@@ -11,12 +11,12 @@ begin
     gem.homepage = "http://github.com/rodolfoliviero/vraptor-scaffold"
     gem.authors = ["Rodolfo Liviero"]
     
-    gem.add_dependency "thor", ">=0.13.8"
-	  gem.add_dependency "rake", ">=0.8.7"
+    gem.add_dependency "thor", ">=0.14.0"
+	gem.add_dependency "rake", ">=0.8.7"
   	gem.add_dependency "activesupport", ">=3.0.0.beta4"
-	  gem.add_dependency "bundler", ">=1.0.0.beta.5"
+	gem.add_dependency "bundler", ">=1.0.0.rc.2"
 	
-  	gem.post_install_message = "Thank you for installing vraptor-scaffold. Please read http://github.com/rodolfoliviero/vraptor-scaffold/blob/master/README.rdoc for more information."
+	gem.post_install_message = "Thank you for installing vraptor-scaffold. Please read http://github.com/rodolfoliviero/vraptor-scaffold/blob/master/README.rdoc for more information."
   end
   Jeweler::GemcutterTasks.new
 rescue LoadError
