@@ -17,3 +17,4 @@ jetty goal
 http://docs.codehaus.org/display/JETTY/Maven+Jetty+Plugin
 generate equals end hashcode
 unit tests to generated code
+support to change default encondig when create new app like --enconding=ISO-8859-1
