@@ -1,1 +1,3 @@
-<#include "form.ftl">
+<body>
+	<#include "form.ftl">
+</body>
