@@ -7,6 +7,7 @@
 
 == Improvements
 * Better freemarker views.
+* UTF-8 default enconding.
 
 === 0.0.1.beta4 / 2010-07-16
 
